fixbug: content add text align: justity

--- a/src/styles/Layout/policy.module.scss
+++ b/src/styles/Layout/policy.module.scss
@@ -48,6 +48,15 @@
       padding-top: 42px;
     }
   }
+  .contentImg {
+    .smDesc {
+      margin-block: 11px;
+      margin-right: 20px;
+      line-height: 24px;
+      letter-spacing: 0.01em;
+      font-weight: normal;
+    }
+  }
   .textContent {
     display: flex;
     line-height: 24px;
@@ -108,6 +117,17 @@
   .rightContent {
     width: 90vw;
     margin: auto;
+    .contentImg {
+      .smDesc {
+        margin-right: 0;
+        text-align: justify;
+      }
+    }
+    .textContent {
+      .description {
+        text-align: justify;
+      }
+    }
     .bannerImage {
       display: flex;
       flex-direction: column;
